# cookiecutter-sample

./: cookiecutter.json
{{ cookiecutter.project_slug }}/: .gitignore  README.md  pyproject.toml
